--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 <body>
 
   <div id="root"></div>
-  
+
   <script type="module/babel" data-presets="ca-preset" src="app.js"></script>
 
   <script src="lib/loadBabelModules.js"></script>
   <script src="lib/babel.js"></script>
   <script src="lib/babel-preset.js"></script>
-  <script src="https://kit.fontawesome.com/2a636867a9.js" crossorigin="anonymous"></script></body>
+  <script src="https://kit.fontawesome.com/2a636867a9.js" crossorigin="anonymous"></script>
+</body>
 
 </html>
