--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
   <link rel="stylesheet" href="lib/animate.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <title>AppSus</title>
 </head>
 
